[tool.poetry]
name = "my-hypermodern-python"
version = "0.1.0"
description = "The hypermodern Python project"
authors = ["Navneeth C <navneethc@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/navneethc/my-hypermodern-python"
repository = "https://github.com/navneethc/my-hypermodern-python"
keywords = ["hypermodern"]

[tool.poetry.dependencies]
python = "^3.7"
click = "^7.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
