[tool.poetry]
name = "my-hypermodern-python"
version = "0.1.0"
description = "The hypermodern Python project"
authors = ["Navneeth C <navneethc@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/navneethc/my-hypermodern-python"
repository = "https://github.com/navneethc/my-hypermodern-python"
keywords = ["hypermodern"]

[tool.poetry.dependencies]
python = "^3.7"
click = "^7.1.2"
requests = "^2.25.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
coverage = {extras = ["toml"], version = "^5.5"}
pytest-cov = "^2.11.1"
pytest-mock = "^3.6.1"
black = "^21.9b0"
flake8 = "^4.0.1"
flake8-bandit = "^2.1.2"
flake8-black = "^0.2.3"
flake8-bugbear = "^21.9.2"
flake8-import-order = "^0.18.1"
safety = "^1.10.3"
mypy = "^0.910"

[tool.poetry.scripts]
hypermodern-python = "my_hypermodern_python.console:main"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["my_hypermodern_python"]

[tool.coverage.report]
show_missing = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
